--- a/darktheme/settings/res/values/colors.xml
+++ b/darktheme/settings/res/values/colors.xml
@@ -18,9 +18,15 @@
 <resources>
 
     <!-- Color for the background of the shortcut icons.-->
-    <color name="shortcut_background">@*android:color/primary_device_default_dark</color>
+    <color name="shortcut_background">#000000</color>
 
     <!-- Wifi network details -->
     <color name="wifi_details_icon_color">#8AFFFFFF</color>
+    
+    <!-- Suggestion/condition colors -->
+    <color name="suggestion_condition_background">#000000</color>
+    <color name="condition_card_background">#000000</color>
+    <color name="suggestion_tile_background">#000000</color>
+    <color name="suggestion_title_text_color">#FFFFFF</color>
 
 </resources>
